internal/templates/testdata/golden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devenv-ingress-testuser
  namespace: devenv-test
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    
spec:
  ingressClassName: nginx
  rules:
    - host: testuser.devenv.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devenv-http-testuser
                port:
                  name: http
  tls:
    - hosts:
        - "*.devenv.example.com"
      secretName: http-testuser-tls
