internal/templates/testdata/golden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devenv-testuser
  namespace: devenv-test
  labels:
    app: devenv-testuser
    service: governing
spec:
  clusterIP: None
  selector:
    app: devenv-testuser
  ports:
  - name: ssh
    port: 22
    targetPort: 22
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: devenv-ssh-testuser
  namespace: devenv-test
  labels:
    app: devenv-testuser
    service: ssh
spec:
  type: NodePort
  selector:
    app: devenv-testuser
  ports:
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30001
    protocol: TCP
---
apiVersion: v1
kind: Service  
metadata:
  name: devenv-http-testuser
  namespace: devenv-test
  labels:
    app: devenv-testuser
    service: http
spec:
  type: ClusterIP
  selector:
    app: devenv-testuser
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
