internal/templates/testdata/golden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devenv-testuser
  namespace: devenv-test
  labels:
    app: devenv-testuser
    component: devenv
spec:
  serviceName: devenv-testuser
  replicas: 1
  selector:
    matchLabels:
      app: devenv-testuser
  template:
    metadata:
      labels:
        app: devenv-testuser
        component: devenv
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - node1
                      - node2
      priorityClassName: dev-gpu
      serviceAccountName: k8s-launcher

      containers:
      - name: testuser
        image: ubuntu:22.04
        workingDir: "/src"
        securityContext:
          # Root required to configure new user and setup sshd
          runAsUser: 0
        command: ["/bin/bash", "/scripts/startup.sh"]
        ports:
        - containerPort: 22
          name: ssh
        - containerPort: 8080
          name: http

        readinessProbe:
          tcpSocket:
            port: 22
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 6

        env:
        - name: GITHUB_TOKEN
          valueFrom:
            secretKeyRef:
              name: github-token
              key: token
              optional: true
        envFrom:
        - configMapRef:
            name: env-vars-testuser

        resources:
          limits:
            nvidia.com/gpu: "2"
            cpu: "4000m"
            memory: "16Gi"
          requests:
            nvidia.com/gpu: 2
            cpu: "4000m"
            memory: "16Gi"
            
        volumeMounts:
        - name: dev-storage
          mountPath: /home/testuser
        - name: dev-linuxbrew  
          mountPath: /home/linuxbrew
        - name: startup-scripts
          mountPath: /scripts
          readOnly: true
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config

      volumes:
      - name: dev-storage
        hostPath:
          path: /mnt/devenv/testuser/homedir
          type: DirectoryOrCreate
      - name: dev-linuxbrew
        hostPath:
          path: /mnt/devenv/testuser/linuxbrew  
          type: DirectoryOrCreate
      - name: startup-scripts
        configMap:
          name: startup-scripts-testuser
          defaultMode: 0755
      - name: data-volume
        hostPath:
          path: /mnt/data
          type: DirectoryOrCreate
      - name: config-volume
        hostPath:
          path: /mnt/config
          type: DirectoryOrCreate
